# local-model-router

./: .env.example  .gitignore  README.md  pyproject.toml  run_benchmark.py  test_connection.py
benchmark/: metrics.py  report.py  runner.py  tasks.py
benchmark/providers/: base.py  groq_provider.py  ollama_provider.py  openrouter_provider.py
plans/: nvidia-nim.md
rankings/: cloud.yaml  local.yaml
results/: benchmark_20260618_230445.json  benchmark_20260618_230725.json  benchmark_20260618_231249.json  benchmark_20260619_234614.json  benchmark_20260619_234634.json  benchmark_20260619_234932.json  benchmark_20260619_234957.json  benchmark_20260620_004527.json  benchmark_20260620_004944.json  benchmark_20260620_011323.json  benchmark_20260620_012006.json  benchmark_20260620_012044.json  benchmark_20260620_101129.json  benchmark_20260621_120527.json  benchmark_20260621_122742.json
router/: __main__.py  dispatcher.py  registry.py  server.py
